manifests/apps/02-development/03-snippets/00-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: snippets
  labels:
    environment: development
