manifests/apps/02-development/03-snippets/02-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: snippets-service
  namespace: snippets
spec:
  selector:
    app: snippets
  ports:
  - name: snippets-http
    port: 5000
